--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,8 @@
 machine:
   ruby:
-    version: 2.0.0-p353
+    version: 2.3.1
 test:
   pre:
     - bundle exec rubocop
   post:
-    - bundle exec rspec 
+    - bundle exec rspec
