--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,23 +4,18 @@ on: push
 jobs:
   test_and_lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby_version:
-        - '2.7'
-        - '3.0'
+    env:
+      BUNDLE_NO-CACHE: 'true'
+      BUNDLE_JOBS: '4'
+      BUNDLE_RETRY: '3'
     steps:
     - uses: actions/checkout@v3.1.0
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby_version }}
         bundler-cache: true
     - name: Run specs
-      # todo update test globbing and add rspec-github gem for the formatter
-      run: |-
-        circleci tests glob "spec/**/*_spec.rb"
-        bundle exec rspec $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings) --profile --format progress --format RSpec::Github::Formatter -o /tmp/ci_artifacts/rspec.xml
+      run: bundle exec rspec --format progress --format RSpec::Github::Formatter -o /tmp/rspec.xml
     - name: Rubocop
       run: bundle exec rubocop --extra-details --display-style-guide --parallel --force-exclusion
     - uses: actions/upload-artifact@v2
